--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 asgiref==3.5.2
 beautifulsoup4==4.11.1
+dj-database-url==0.5.0
 Django==3.2.5
 django-bootstrap-v5==1.0.11
 django-bootstrap4==22.1
 django-bootstrap5==21.3
+django-heroku==0.3.1
+gunicorn==20.1.0
 Pillow==9.1.1
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
+python-decouple==3.6
 pytz==2022.1
 soupsieve==2.3.2.post1
 sqlparse==0.4.2
+whitenoise==6.1.0
